wayland: Use true logical geometry in Display::outputsIntersecting()

Display::outputsIntersecting() computes the logical geometry using the
oriented mode size and the scale factor, but OutputInterface's scale
factor is ceil()ed up, so the resulting logical geometry can be incorrect.

BUG: 459733


(cherry picked from commit f343f3fb80284a8e402b39924c789b629806ac62)